--- a/media/start.css
+++ b/media/start.css
@@ -62,3 +62,14 @@ a {
     vertical-align: middle;
     margin-left: 12px;
 }
+
+.description {
+    color: #101010;
+    font: 16px Monaco, Consolas, mono
+    margin-top: 10%;
+    width: 60%;
+    margin: 20px auto;
+    background: #fff;
+    border-radius: 20px;  
+    padding: 10px; 
+}
