gjango first try

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project Emergent</title>
-        <link rel="stylesheet" href="/media/start.css">
+        <link rel="stylesheet" href="/static/start.css">
     </head>
     <body>
         <div class="titlebar">
