Formatting. Description belongs to the project page and shouldn't live in the product itself.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,10 @@
     <body>
         <div class="titlebar">
             <h1>Project Emergent</h1>
-            <p>GitHub repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a><iframe src="http://ghbtns.com/github-btn.html?user=averrin&repo=emergent&type=fork"
-  allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20" class="gh-button"></iframe>
-            </p>
-        </div>
-        <div class="description">
-            <p>
-                Суть проекта такова: форкаете репозиторий, делаете все что угодно, делаете пулл-реквест.Я мержу, добавляю вас в контрибьюторы и продолжаем безумие. Предложения по серверной части приветствуются. И да, рассказывайте друзьям.
-            </p>
-            <p>
-                Собственно, после небольшого обсуждения поставили Django.</a>
-            </p>
+            <p>GitHub repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a>
+            <iframe src="http://ghbtns.com/github-btn.html?user=averrin&repo=emergent&type=fork"
+                allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20" class="gh-button">
+            </iframe></p>
         </div>
     </body>
 </html>
