--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,11 @@
                 allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20" class="gh-button">
             </iframe></p>
         </div>
+        <div class="page">
+            <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
+            Feel free to contribute stuff.</p>
+            <p>Sign up button and other nice things will be here soon. Stay tuned, and don't change the channel!</p>
+            <p>-- Project Emergent developers</p>
+        </div>
     </body>
 </html>
