--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
         <div class="page">
             <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
             Feel free to contribute stuff.</p>
-            <p>Sign up button and other nice things will be here soon. Stay tuned, and don't change the channel!</p>
             <p>-- Project Emergent developers</p>
+            <p class="signup-wrap"><a href="?" class="signup-btn">Registration (just $24.99)<br><small>The "shut up and take my money" button</small></a></p>
         </div>
     </body>
 </html>
