--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
             Feel free to contribute stuff.</p>
             <p>-- Project Emergent developers</p>
-            <p class="signup-wrap"><a href="?" class="signup-btn">Registration (just $24.99)<br><small>The "shut up and take my money" button</small></a></p>
+            <p class="signup-wrap"><a href="?" class="signup-btn">Registration (just ${{price}}.99)<br><small>The "shut up and take my money" button</small></a></p>
         </div>
     </body>
 </html>
