--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project Emergent</title>
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
         <link rel="stylesheet" href="/static/start.css">
     </head>
     <body>
@@ -16,8 +17,11 @@
         <div class="page">
             <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
             Feel free to contribute stuff.</p>
-            <p>-- Project Emergent developers</p>
-            <p class="signup-wrap"><a href="?" class="signup-btn">Registration (just $24.99)<br><small>The "shut up and take my money" button</small></a></p>
+            <p>This site is so very under construction that it may, or may not, lead to catastrophic death of people and things dear to you.
+            Please avoid using Emergent while drunk, high, pregnant and/or retarded. Thank you very much,</p>
+            <p>Project Emergent developers.</p>
+            <p class="signup-wrap"><a href="https://github.com/averrin/emergent" class="signup-btn">Register now and receive nothing<br>
+            <small>The "shut up and take my money" button</small></a></p>
         </div>
     </body>
 </html>
