--- a/static/start.css
+++ b/static/start.css
@@ -98,9 +98,7 @@ p { margin: 0 0 20px; }
     transition: background-position 250ms;
 }
 
-.signup-btn small {
-    font-size: 16px;
-}
+.signup-btn small { font-size: 16px; }
 
 .signup-btn:hover { background-position: 0 50%; }
 .signup-btn:active { top: 2px; }
