--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <p>This site is so very under construction that it may, or may not, lead to catastrophic death of people and things dear to you.
             Please avoid using Emergent while drunk, high, pregnant and/or retarded. Thank you very much,</p>
             <p>Project Emergent developers.</p>
-            <p class="signup-wrap"><a href="https://github.com/averrin/emergent" class="signup-btn">Register now <em>(just ${{price}}.99)</em><br>
+            <p class="signup-wrap"><a href="https://github.com/averrin/emergent" class="signup-btn">Register now for just ${{price}}.99<br>
             <small>The "shut up and take my money" button</small></a></p>
         </div>
     </body>
