--- a/static/start.css
+++ b/static/start.css
@@ -72,6 +72,7 @@ p { margin: 0 0 20px; }
     margin: 30px auto 0;
     max-width: 900px;
     padding: 20px 20px 5px;
+    opacity: 0.95;
 }
 
 .signup-wrap { text-align: center; }
