--- a/static/start.css
+++ b/static/start.css
@@ -65,14 +65,13 @@ p { margin: 0 0 20px; }
 }
 
 .page {
-    background: #fff;
+    background: rgba(255,255,255,0.95);
     color: #101010;
     font-size: 14px;
     line-height: 20px;
     margin: 30px auto 0;
     max-width: 900px;
     padding: 20px 20px 5px;
-    opacity: 0.95;
 }
 
 .signup-wrap { text-align: center; }
