Improvemented template system: added base template, changed all templates to make them work with base one, put emergent templates to the separeted folder, moved disqus template to the _partials.

--- a/templates/zen/index.html
+++ b/templates/zen/index.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Zen</title>
-        <style type="text/css">
-            p {
-                text-align: center;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="wrapper">
-            <p>{{ message }}</p>
-        </div>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block page %}
+    <p>{{ message }}</p>
+    {%include "_partials/disqus.html"%}
+{% endblock page %}
