--- a/templates/emergent/status.html
+++ b/templates/emergent/status.html
@@ -1,4 +1,7 @@
-Repo status:
-<pre>
-{{status}}
-</pre>
+{% extends "base.html" %}
+{%block page %}
+	Repo status:
+	<pre>
+		{{status}}
+	</pre>
+{%endblock page%}
