--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,6 +20,7 @@
                 <span class='label'>:Password</span>
             </p>
              <input type="submit" value="Sign in"/>
+            <a href="/accounts/register">Sign up</a>
         </div>
 
         <input type="hidden" name="next" value="{{ next }}"/>
