change button text

--- a/templates/emergent/index.html
+++ b/templates/emergent/index.html
@@ -6,6 +6,6 @@
     Please avoid using Emergent while drunk, high, pregnant and/or retarded. Thank you very much,</p>
     <p>Project Emergent developers.</p>
     <p class="signup-wrap"><a href="/status" class="signup-btn">Register now for just ${{price}}.99<br>
-    <small>The "shut up and take my money" button</small></a></p>
+    <small>Link to status page. Login required.</small></a></p>
     {%include "_partials/disqus.html"%}
 {% endblock page %}
