--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Project Emergent</title>
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-        <link rel="stylesheet" href="/static/start.css">
+        <script type="text/javascript" src='{% static 'jquery/jquery.js' %}'></script>
+        <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
+        <link rel="stylesheet" href='{% static "bootstrap/dist/css/bootstrap.css" %}'>
+        <link rel="stylesheet" href="{% static 'start.css' %}">
     </head>
     <body>
+
+<div class="navbar">
+  <div class="container">
+
+    <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+
+    <!-- Be sure to leave the brand out there if you want it shown -->
+    <a class="navbar-brand" href="/">Project Emergent</a>
+
+    <!-- Place everything within .nav-collapse to hide it until above 768px -->
+    <div class="nav-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="/status">Status</a></li>
+            {% endif %}
+        </ul>
+	{% if user.is_authenticated %}
+            <p class="navbar-text pull-right">Signed in as <a href="/accounts/profile/" class="navbar-link">{{user}}</a></p>
+        {%else%}
+            <button id="login_btn" type="button" class="btn btn-default navbar-btn pull-right">Sign in</button>
+        {% endif %}
+    </div><!-- /.nav-collapse -->
+
+  </div><!-- /.container -->
+</div><!-- /.navbar -->
+
+
+    <div class="container">
+
         <div class="titlebar">
             {% block titlebar %}
                 <h1>Project Emergent</h1>
@@ -19,6 +58,7 @@
         <div class="page">
             {% block page %}{% endblock page %}
         </div>
+    </div>
     </body>
 </html>
 
