--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,6 @@
         <meta charset="utf-8">
         <title>Project Emergent</title>
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-        <script type="text/javascript" src='{% static 'jquery/jquery.js' %}'></script>
-        <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
         <link rel="stylesheet" href='{% static "bootstrap/dist/css/bootstrap.css" %}'>
         <link rel="stylesheet" href="{% static 'start.css' %}">
     </head>
@@ -36,9 +34,7 @@
 	{% if user.is_authenticated %}
 
         <ul class="nav navbar-nav pull-right">
-            <li><p class="navbar-text">Signed in as <a href="/accounts/profile/" class="navbar-link">{{user}}</a></p></li>
-		<li>&nbsp;</li>
-            <li><button id="logout_btn" type="button" class="btn btn-default navbar-btn">Log out</button></li>
+            {% include "_partials/navbar_user.html" %}
 	</ul>
         {%else%}
             <button id="login_btn" type="button" class="btn btn-default navbar-btn pull-right">Sign in</button>
@@ -65,6 +61,11 @@
         </div>
     </div>
     </body>
+
+    <script type="text/javascript" src='{% static 'jquery/jquery.js' %}'></script>
+    <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
+    <script type="text/javascript" src='{% static 'js/rpg.js' %}'></script>
+    <script type="text/javascript" src='{% static 'js/main.js' %}'></script>
 
 
     <script>
