--- a/templates/emergent/profile.html
+++ b/templates/emergent/profile.html
@@ -3,56 +3,59 @@
 
 {% block page %}
     <link rel="stylesheet" href="{% static 'profile.css' %}">
-    Даже не брался верстать.
 
-    {% if profile.avatar %}
-        <img src="/media/{{ profile.avatar }}" class="profile_avatar">
-    {% endif %}
-
-    {% if user.username == profile.username %}
-        It's you, {{ user }}.
-    {% else %}
-        Username: {{ profile }}
-    {% endif %}
-
-    <ul>
-        <li> Exp: {{ profile.exp }} [{{ profile.level.id|default:"0" }}]
-            {% if user.username == profile.username %}
-                <button class="" id="add_exp">Add exp</button>
+    <div class="row">
+        <div class="col-lg-3">
+            <h4>  {{ profile }}
+                {% if user.username == profile.username %}
+                    <span class="label">You</span>
+                {% endif %}
+            </h4>
+            {%  if profile.avatar %}
+                <img src="/media/{{ profile.avatar }}" class="profile_avatar">
+            {% else %}
+                <img src="http://lorempixel.com/400/400/cats" class="profile_avatar"/>
             {% endif %}
-        </li>
-        <li>
             <div class="progress progress-striped active">
                 <div class="progress-bar"  role="progressbar" aria-valuenow="{{ profile.exp_percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ profile.exp_percentage }}%">
                     <span class='sr-only'>{{ profile.exp_percentage }}% Complete</span>
                 </div>
             </div>
-        </li>
-        <li> Coins: {{ profile.credits }}
-            {% if user.username == profile.username %}
-                <button class="" id="add_coin">Add coins</button>
-            {% else %}
-                <button class="" id="give_coin" data-to="{{ profile.username }}" {% if not profile.credits %}disabled=disabled{% endif %}>Give a coin</button>
-            {% endif %}
-        </li>
-        {% if profile.guilds.all %}
-            <li> Guilds:
-                <ul>
-                    {% for guild in profile.guilds.all %}
-                        <li>{{ guild.name }}</li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endif %}
-        {% if profile.titles.all %}
-            <li> Titles:
-                <ul>
-                    {% for title in profile.titles.all %}
-                        <li>{{ title.name }}</li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endif %}
-    </ul>
+        </div>
+        <div class="col-lg-9">
+            <ul>
+                <li> Exp: {{ profile.exp }} [{{ profile.level.id|default:"0" }}]
+                    {% if user.username == profile.username %}
+                        <button class="" id="add_exp">Add exp</button>
+                    {% endif %}
+                </li>
+                <li> Coins: {{ profile.credits }}
+                    {% if user.username == profile.username %}
+                        <button class="" id="add_coin">Add coins</button>
+                    {% else %}
+                        <button class="" id="give_coin" data-to="{{ profile.username }}" {% if not user.credits %}disabled=disabled{% endif %}>Give a coin</button>
+                    {% endif %}
+                </li>
+                {% if profile.guilds.all %}
+                    <li> Guilds:
+                        <ul>
+                            {% for guild in profile.guilds.all %}
+                                <li>{{ guild.name }}</li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endif %}
+                {% if profile.titles.all %}
+                    <li> Titles:
+                        <ul>
+                            {% for title in profile.titles.all %}
+                                <li>{{ title.name }}</li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endif %}
+            </ul>    
+        </div>
+    </div>
 
 {% endblock %}
