--- a/templates/_partials/navbar_user.html
+++ b/templates/_partials/navbar_user.html
@@ -1,6 +1,13 @@
+<li>
+    {%  if profile.avatar %}
+        <img src="/media/{{ user.avatar }}" class="navbar_avatar">
+    {% else %}
+        <img src="http://lorempixel.com/400/400/cats" class="navbar_avatar"/>
+    {% endif %}
+</li>
 <li class="user_info">
     <p class="navbar-text level_info" title="Exp: {{ user.exp }}<br>Coins: {{ user.credits }}">
-        Signed in as <a href="/accounts/profile/" class="navbar-link">{{user}} [{{ user.level.id|default:"0" }}]</a>
+       <a href="/accounts/profile/" class="navbar-link">{{user}} [{{ user.level.id|default:"0" }}]</a>
     </p>
 </li>
 <li>
