--- a/templates/emergent/index.html
+++ b/templates/emergent/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "landing.html" %}
 {% block page %}
     <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
     Feel free to contribute stuff.</p>
