--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
         <link rel="stylesheet" href='{% static "bootstrap/dist/css/bootstrap.css" %}'>
         <link rel="stylesheet" href="{% static 'start.css' %}">
+        <link rel="stylesheet" href="{% static 'base.css' %}">
     </head>
     <body>
 
