--- a/templates/emergent/profile.html
+++ b/templates/emergent/profile.html
@@ -21,9 +21,13 @@
                     <span class='sr-only'>{{ profile.exp_percentage }}% Complete</span>
                 </div>
             </div>
+            <ul>
+                <li>{{ profile.email }}</li>
+            </ul>
         </div>
         <div class="col-lg-9">
             <ul>
+
                 <li>
                     <img src="{% static 'icons/exp.png' %}" alt="exp" class="profile_rpg_icon"/>
                     Exp: {{ profile.exp }}/{{ profile.next_level.exp }} [{{ profile.level.id|default:"0" }}]
@@ -57,6 +61,8 @@
                             {% endfor %}
                         </ul>
                     </li>
+                {% else %}
+                    <button class="btn btn-primary" id="buy_cheater">Buy Cheater title</button>
                 {% endif %}
             </ul>    
         </div>
