--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-<div class="navbar">
+<div class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
 
     <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
