--- a/static/start.css
+++ b/static/start.css
@@ -11,6 +11,7 @@ body {
     color: #fbfbfb;
     font-family: 'Open Sans', 'Segoe UI', 'Droid Sans', sans-serif;
     margin: 0;
+    padding-top: 70px;
     text-rendering: optimizeLegibility;
     -ms-overflow-style: scrollbar;
 }
