Gitlive on landing.
Web commit from ipad

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -76,6 +76,9 @@
 		    window.location = "{% url 'auth_logout' %}"
 	    })
     </script>
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['Averrin/emergent']}</script>
+<div id='commits'></div>
 
 </html>
 
