websocket with pusher #44

--- a/templates/emergent/status.html
+++ b/templates/emergent/status.html
@@ -4,4 +4,7 @@
 	<pre>
 		{{status}}
 	</pre>
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['averrin/emergent']}</script>
+<div id='commits'></div>
 {%endblock page%}
