add some css and username #44

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
     <script type="text/javascript" src='{% static 'notify.js' %}'></script>
 
+    <script type="text/javascript" src='{% static 'js/init.js' %}'></script>
     <script type="text/javascript" src='{% static 'js/rpg.js' %}'></script>
     <script type="text/javascript" src='{% static 'js/main.js' %}'></script>
 
