--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
             <li class="active"><a href="/">Home</a></li>
             {% if user.is_authenticated %}
             <li><a href="/status">Status</a></li>
+            <li><a href="/chat">Chat</a></li>
             <li><a href="/admin">Admin</a></li>
             {% endif %}
         </ul>
