--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <li class="active"><a href="/">Home</a></li>
             {% if user.is_authenticated %}
             <li><a href="/status">Status</a></li>
-            <li><a href="/chat">Chat</a></li>
+            <li><a href="/activity">Activity</a></li>
             <li><a href="/admin">Admin</a></li>
             {% endif %}
         </ul>
@@ -60,10 +60,14 @@
     <script type="text/javascript" src='{% static 'jquery/jquery.js' %}'></script>
     <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
     <script type="text/javascript" src='{% static 'notify.js' %}'></script>
+    <script src="{% static 'epiceditor/js/epiceditor.min.js' %}"></script>
+    <script type='text/javascript' src='http://js.pusher.com/2.1/pusher.min.js'></script>
 
     <script type="text/javascript" src='{% static 'js/init.js' %}'></script>
     <script type="text/javascript" src='{% static 'js/rpg.js' %}'></script>
     <script type="text/javascript" src='{% static 'js/main.js' %}'></script>
+
+    <script src="{% static 'js/activity.js' %}"></script>
 
 
     <script>
