add abstract layer for websockets. issue #51

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
     <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script>
     <script type="text/javascript" src='{% static 'notify.js' %}'></script>
     <script type='text/javascript' src='http://js.pusher.com/2.1/pusher.min.js'></script>
+    <script type='text/javascript' src='{% static 'js/websockets.js' %}'></script>
     <script type="text/javascript" src='{% static 'underscore/underscore.js' %}'></script>
 
     <script type="text/javascript" src='{% static 'js/init.js' %}'></script>
