--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,11 @@
         <link rel="stylesheet" href="{% static 'start.css' %}">
         <link rel="stylesheet" href="{% static 'base.css' %}">
     </head>
-    <body>
+<body>
+
+<a href="https://github.com/averrin/emergent">
+    <img style="position: absolute; top: 48px; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub">
+</a>
 
 <div class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
