--- a/templates/emergent/index.html
+++ b/templates/emergent/index.html
@@ -1,5 +1,12 @@
-{% extends "landing.html" %}
+{% extends "base.html" %}
 {% block page %}
+        <div class="titlebar">
+                <h1>Project Emergent</h1>
+{#                <p>GitHub repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a>#}
+{#                <iframe src="http://ghbtns.com/github-btn.html?user=averrin&repo=emergent&type=fork"#}
+{#                    allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20" class="gh-button">#}
+{#                </iframe></p>#}
+        </div>
     <p>Hello and welcome to Emergent, the ultimate opensauce Twitter clone (or something along the lines).
     Feel free to contribute stuff.</p>
     <p>This site is so very under construction that it may, or may not, lead to catastrophic death of people and things dear to you.
