--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         <title>Project Emergent</title>
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
         <link rel="stylesheet" href='{% static "bootstrap/dist/css/bootstrap.css" %}'>
+        <link rel="stylesheet" href='{% static "animate.css/animate.min.css" %}'>
         <link rel="stylesheet" href='{% static "notify.css" %}'>
 
         <link rel="stylesheet" href="{% static 'start.css' %}">
